--- a/index.html
+++ b/index.html
@@ -5,8 +5,134 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="main-header">
+      <img src="#" alt="Изображение флага города Седоны">
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a href="#">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a href="catalog.html" class="selected-page">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <img src="#" alt="Поиск">
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <img src="" alt="Избранное"><span class="amount-favorites">12</span>
+              </a>
+          </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Хочу сюда</a>
+            </li>
+          </ul>
+        </nav>
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Город Седона</h1>
+      <section class="welcome-city">
+        <img src="#" alt="Изображение горной местности города Седона" class="backround-welcome">
+        <img src="#" alt="WELCOME">
+        <img src="#" alt="-to the gorgeus-">
+        <img src="#" alt='SEDONA "Because the Grand Canyon sucks!"'>
+        <img src="#" alt="" class="backround-image">
+        <section class="city-description">
+          <h2>Седона — небольшой городок в Аризоне,
+            заслуживающий большего!</h2>
+          <h3>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h3>
+        </section>
+      </section>
+      <section class="advantages">
+        <ul class="advantages-list">
+          <li class="first-block-advantages">
+            <span class="first-block-advantages-description">
+              <h2>Настоящий <br>городок</h2>
+              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </span>
+            <img src="#" alt="" class="backround-image">
+          </li>
+          <li class="second-block-advantages">
+            <ul class="city-advantages">
+              <li class="city-advantages-1"><h2>Настоящий <br>городок</h2> <h3>Все достопримечательности находятся очень близко</h3></li>
+              <li class="city-advantages-2"><h2>Красивая
+                дорога</h2><p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p></li>
+              <li class="city-advantages-3"><h2>Мало
+                туристов</h2><p>Большинство едет в Гранд Каньон и толпится там</p></li>
+            </ul>
+          </li>
+          <li class="third-block-advantages">
+            <img src="#" alt="" class="backround-image">
+            <span class="third-block-advantages-text">
+              <h2>Там есть
+                мост дьявола</h2>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </span>
+          </li>
+        </ul>
+      </section>
+      <section class="advantages-footer">
+        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
+      </section>
+      <section class="services">
+        <ul class="services-list">
+          <li class="services-item1">
+            <h2>Жильё</h2>
+            <p>Рекомендуем пожить<br>в настоящем мотеле,
+              всё как в кино!</p>
+          </li>
+          <li class="services-item2">
+            <h2>Еда</h2>
+            <p>Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="services-item3">
+            <h2>Сувениры</h2>
+            <p>Не только китайского,
+              но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="#" class="hotel-search-button">Поиск гостинницы в Седоне</a>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <section class="subscribe-mailing">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+      </section>
+      <form action="https://echo.htmlacademy.ru/" class="email-button" method="post">
+        <input type="text" name="email-user" placeholder="Ваш e-mail">
+        <button class="button" type="submit">Подписаться</button>
+      </form>
+      <ul class="links-list">
+        <li class="links-item">
+          <a href="https://vk.com/htmlacademy" class="vk"><img src="#" alt="Вконтакте"></a>
+        </li>
+        <li class="links-item">
+          <a href="https://t.me/htmlacademy " class="telegramm"><img src="#" alt="Телеграмм"></a>
+        </li>
+        <li class="links-item">
+          <a href="https://www.youtube.com/user/htmlacademyru" class="youtube"><img src="#" alt="Ютуб"></a>
+        </li>
+        <li class="links-item">
+          <a href="tel:+78128121212" class="telephone">+7 (812) 812-12-12</a>
+        </li>
+        <li class="links-item">
+          <a href="https://htmlacademy.ru/" class="htmlacademy"><img src="#" alt="HTML Academy"></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
